--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -8,7 +8,7 @@
                 xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
 <ui:define name="menu">
     <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
-        <li class="uk-nav-header">#{etiqueta['menu']}</li>
+        <li class="uk-nav-header">#{otrosetiqueta['menu']}</li>
         <li class="uk-parent uk-open">
             <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
             <ul class="uk-nav-sub">
